tests/snapshots/test_visual_report__darken_hex_invalid_passthrough.snap
---
source: tests/test_visual_report.rs
expression: "darken_hex(\"not-a-color\", 0.85)"
---
not-a-color
