tests/snapshots/test_visual_report__format_currency_large_with_commas.snap
---
source: tests/test_visual_report.rs
expression: "format_currency(1234567.89, true)"
---
£1,234,567.89
